[workspace]
resolver = "2"
members = ["clients/rust", "program"]

[workspace.package]
authors = ["Anza Technology Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/address-lookup-table"
readme = "./README.md"
license-file = "./LICENSE"
edition = "2021"

[workspace.metadata.cli]
solana = "2.0.1"

# Specify Rust toolchains for rustfmt, clippy, and build.
# Any unprovided toolchains default to stable.
[workspace.metadata.toolchains]
format = "nightly-2024-05-02"
lint = "nightly-2024-05-02"

[workspace.dependencies]
bincode = "1.3.3"
borsh = "0.10"
bytemuck = "1.14.1"
kaigan = "0.2.4"
mollusk-svm = "0.0.10-solana-2.0"
mollusk-svm-bencher = "0.0.10-solana-2.0"
num-derive = "0.4"
num-traits = "0.2"
serde = "1.0.193"
serde_with = "3.0"
solana-frozen-abi = "2.0.1"
solana-frozen-abi-macro = "2.0.1"
solana-program = "2.0.1"
solana-sdk = "2.0.1"
strum = "0.24"
strum_macros = "0.24"
test-case = "3.3.1"
thiserror = "1.0.61"
