[workspace]
resolver = "2"
members = ["clients/rust", "program"]

[workspace.package]
authors = ["Anza Technology Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/address-lookup-table"
readme = "./README.md"
license-file = "./LICENSE"
edition = "2021"

[workspace.metadata.cli]
solana = "2.3.4"

[workspace.metadata.spellcheck]
config = "scripts/spellcheck.toml"

# Specify Rust toolchains for rustfmt, clippy, and build.
# Any unprovided toolchains default to stable.
[workspace.metadata.toolchains]
format = "nightly-2025-02-16"
lint = "nightly-2025-02-16"

[workspace.dependencies]
bincode = "1.3.3"
borsh = "0.10"
bytemuck = "1.14.1"
kaigan = "0.2.4"
mollusk-svm = "0.4.0"
mollusk-svm-bencher = "0.4.0"
num-derive = "0.4"
num_enum = "0.7"
num-traits = "0.2"
serde = "1.0.193"
serde_with = "3.0"
solana-account-info = "2.2.1"
solana-bincode = "2.2.1"
solana-client = "2.3.4"
solana-clock = "2.2.1"
solana-cpi = "2.2.1"
solana-frozen-abi = "2.2.1"
solana-frozen-abi-macro = "2.2.1"
solana-instruction = "2.2.1"
solana-msg = "2.2.1"
solana-program = "2.3.0"
solana-program-entrypoint = "2.2.1"
solana-program-error = "2.2.1"
solana-pubkey = "2.2.1"
solana-rent = "2.2.1"
solana-sdk = "2.3.0"
solana-sdk-ids = "2.2.1"
solana-slot-hashes = "2.2.1"
solana-system-interface = "1"
solana-sysvar = "2.2.1"
strum = "0.24"
strum_macros = "0.24"
test-case = "3.3.1"
thiserror = "2.0.12"
