[workspace]
resolver = "2"
members = ["clients/rust", "program"]

[workspace.package]
authors = ["Anza Technology Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/address-lookup-table"
readme = "./README.md"
license-file = "./LICENSE"
edition = "2021"

[workspace.metadata.spellcheck]
config = "scripts/spellcheck.toml"

[workspace.dependencies]
bincode = "1.3.3"
borsh = "0.10.4"
bytemuck = "1.24.0"
kaigan = "0.4.0"
mollusk-svm = "0.10.3"
mollusk-svm-bencher = "0.10.3"
num-derive = "0.4"
num_enum = "0.7"
num-traits = "0.2"
serde = "1.0.228"
serde_with = "3.15"
solana-account = "3.4.0"
solana-account-info = "3.1.0"
solana-bincode = "3.0.0"
solana-client = "3.1.8"
solana-clock = "3.0.1"
solana-cpi = "3.1.0"
solana-frozen-abi = "3.2.0"
solana-frozen-abi-macro = "3.2.0"
solana-instruction = "3.2.0"
solana-msg = "3.0.0"
solana-program-entrypoint = "3.1.1"
solana-program-error = "3.0.0"
solana-pubkey = "4.0.0"
solana-rent = "4.0.0"
solana-sdk-ids = "3.1.0"
solana-slot-hashes = "3.0.1"
solana-system-interface = "3.1.0"
solana-sysvar = "4.0.0"
strum = "0.24"
strum_macros = "0.28"
test-case = "3.3.1"
thiserror = "2.0.17"
