[package]
name = "solana-address-lookup-table-program"
version = "0.1.0"
description = "Solana Address Lookup Table Program"
authors = ["Anza Technology Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/address-lookup-table"
readme = "./README.md"
license-file = "../LICENSE"
edition = "2021"

[package.metadata.solana]
program-id = "AddressLookupTab1e1111111111111111111111111"

[features]
bpf-entrypoint = []
frozen-abi = ["dep:solana-frozen-abi", "dep:solana-frozen-abi-macro"]
test-sbf = []

[dependencies]
bincode = "1.3.3"
bytemuck = "1.14.1"
serde = { version = "1.0.193", features = ["derive"] }
solana-frozen-abi = { version = "2.0.1", optional = true }
solana-frozen-abi-macro = { version = "2.0.1", optional = true }
solana-program = "2.0.1"

[dev-dependencies]
mollusk-svm = { version = "0.0.5", features = ["fuzz"] }
mollusk-svm-bencher = "0.0.5"
solana-sdk = "2.0.1"
strum = "0.24"
strum_macros = "0.24"
test-case = "3.3.1"

[lib]
crate-type = ["cdylib", "lib"]

[[bench]]
name = "compute_units"
harness = false

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
]
