[package]
name = "solana-address-lookup-table-program"
version = "3.0.0"
description = "Solana Address Lookup Table Program"
authors = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
edition = { workspace = true }

[package.metadata.solana]
program-id = "AddressLookupTab1e1111111111111111111111111"

[features]
bpf-entrypoint = []
frozen-abi = ["dep:solana-frozen-abi", "dep:solana-frozen-abi-macro"]
test-sbf = []

[dependencies]
bincode = { workspace = true }
bytemuck = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true, features = ["derive"] }
solana-frozen-abi = { workspace = true, optional = true }
solana-frozen-abi-macro = { workspace = true, optional = true }
solana-program = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
mollusk-svm = { workspace = true, features = ["fuzz-fd"] }
mollusk-svm-bencher = { workspace = true }
solana-sdk = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
test-case = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]

[[bench]]
name = "compute_units"
harness = false

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint", "custom-heap", "custom-panic"))',
]
