[package]
name = "solana-address-lookup-table-program"
version = "3.0.0"
description = "Solana Address Lookup Table Program"
authors = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
edition = { workspace = true }

[package.metadata.solana]
program-id = "AddressLookupTab1e1111111111111111111111111"

[features]
frozen-abi = ["dep:solana-frozen-abi", "dep:solana-frozen-abi-macro"]
test-sbf = []

[dependencies]
bincode = { workspace = true }
bytemuck = { workspace = true }
num-derive = { workspace = true }
num_enum = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true, features = ["derive"] }
solana-account-info = { workspace = true }
solana-bincode = { workspace = true }
solana-clock = { workspace = true }
solana-cpi = { workspace = true }
solana-frozen-abi = { workspace = true, optional = true }
solana-frozen-abi-macro = { workspace = true, optional = true }
solana-instruction = { workspace = true, features = ["std"] }
solana-msg = { workspace = true }
solana-program-entrypoint = { workspace = true }
solana-program-error = { workspace = true }
solana-pubkey = { workspace = true, features = ["bytemuck"] }
solana-rent = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-slot-hashes = { workspace = true }
solana-system-interface = { workspace = true, features = ["bincode"] }
solana-sysvar = { workspace = true, features = ["bincode", "bytemuck"] }
thiserror = { workspace = true }

[dev-dependencies]
mollusk-svm = { workspace = true, features = ["fuzz"] }
mollusk-svm-bencher = { workspace = true }
solana-sdk = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
test-case = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]

[[bench]]
name = "compute_units"
harness = false

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
]
