[package]
name = "solana-address-lookup-table-client"
version = "0.1.0"
description = "A generated Rust library for the Address Lookup Table program"
authors = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
edition = { workspace = true }

[features]
fetch = ["dep:solana-account", "dep:solana-client"]
serde = ["dep:serde", "dep:serde_with", "kaigan/serde"]

[dependencies]
borsh = { workspace = true }
kaigan = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_with = { workspace = true, optional = true }
solana-account = { workspace = true, optional = true }
solana-account-info = { workspace = true }
solana-client = { workspace = true, optional = true }
solana-cpi = { workspace = true }
solana-instruction = { workspace = true }
solana-program-error = { workspace = true }
solana-pubkey = { workspace = true, features = ["borsh", "curve25519"] }
thiserror = { workspace = true }
