[package]
name = "solana-address-lookup-table-client"
version = "0.1.0"
description = "A generated Rust library for the Address Lookup Table program"
authors = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
edition = { workspace = true }

[features]
fetch = ["dep:solana-account", "dep:solana-client"]
serde = ["dep:serde", "dep:serde_with", "kaigan/serde", "solana-pubkey/serde"]

[dependencies]
borsh = { workspace = true }
kaigan = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_with = { workspace = true, optional = true }
solana-account = { version = "2", optional = true }
solana-account-info = "2"
solana-client = { version = "2", optional = true }
solana-cpi = "3"
solana-instruction = "2"
solana-program-error = "2"
solana-pubkey = { version = "2", features = ["borsh", "curve25519"] }
thiserror = { workspace = true }
