[package]
name = "solana-address-lookup-table-client"
version = "0.1.0"
description = "A generated Rust library for the Address Lookup Table program"
authors = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
edition = { workspace = true }

[features]
fetch = ["dep:solana-account", "dep:solana-rpc-client"]

[dependencies]
borsh = "1.0"
solana-account = { version = "3.0", optional = true }
solana-account-info = "3.1"
solana-address = { version = "2.2", features = ["borsh", "curve25519"] }
solana-cpi = "3.1"
solana-instruction = "3.2"
solana-program-error = "3.0"
solana-rpc-client = { version = "3.0", optional = true }
spl-collections = { version = "0.1", features = ["borsh"] }
